--- a/.vitepress/theme/styles/vars.css
+++ b/.vitepress/theme/styles/vars.css
@@ -12,6 +12,7 @@
 
     --vp-c-gray: #8e8e93;
     --vp-c-gray-1: #ccc;
+    --vp-c-gray-2: #eee;
 
     --vp-c-text-light-1: rgba(60, 60, 67);
     --vp-c-text-light-2: rgba(60, 60, 67, 0.75);
