fix: 修复移动端搜索框位置错误问题

--- a/.vitepress/theme/styles/docsearch.css
+++ b/.vitepress/theme/styles/docsearch.css
@@ -20,6 +20,10 @@ html[theme=dark] .DocSearch {
     --docsearch-hit-shadow: none;
 }
 
+.DocSearch-Container {
+    position: fixed;
+}
+
 .DocSearch-Button {
     display: flex;
     justify-content: center;
